[package]
name = "mqtt-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.4"
json = "0.12.4"
paho-mqtt = "0.12.5"
redis = "0.25.4"
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
rumqttc = "0.24.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
