[package]
name = "mqtt-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.4.4"
dotenv = "0.15.0"
json = "0.12.4"
rand = "0.8.5"
redis = { version = "0.25.3", features = ["tokio-comp"] }
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
rumqttc = "0.24.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
